# scalable_computing

./: README.md  chat.cabal  chat_server  chat_server.hs  start.sh
app/: .Main.hs.swp  Main.hs
chat/: README.md  chat.cabal
chat/app/: Main.hs  git.hs  wip.hs
chat/src/: LinkTypes.hs
src/: .Util.hs.swp  .Utils.hs.swp  Client.hs  Utils.hs
