name:                chat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/chat#readme
license:             BSD3
license-file:        LICENSE
author:              Author name Sujan Kumar Nag
maintainer:          nags@tcd.ie
copyright:           2017 Author name Sujan Kumar Nag
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Utils, Client
  build-depends:       base >= 4.7 && < 5, network, hashtables, split, directory, iproute, MissingH
  default-language:    Haskell2010

executable chat-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, network, containers, split,parallel-io, concurrency, stm, async, hashtables
                     , chat
  default-language:    Haskell2010

test-suite chat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sujannag/scalable_computing.git
